# mica

./: README.md
scripts/: install_mlx_ofed.sh  setup.sh
src/: CMakeLists.txt  alloc_pool.c
